2011-07-20  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Embed another root CA certificate to follow
	an update of the server. Now, the server certificate for
	`api.twitter.com' is updated and it cannot be verified by the
	already embedded certificate `Equifax Secure Certificate
	Authority'. So, a root CA certificate `VeriSign Class 3 Public
	Primary CA - G2' is also embedded, which is used for verifying the
	server `api.twitter.com'.
	(twittering-cert-file): removed.
	(twittering-delete-ca-cert-file): removed.
	(twittering-cert-directory): new variable.
	(twittering-delete-ca-cert): new function.
	(twittering-ensure-ca-cert): prepare a directory including
	multiple CA certificates instead of a single file. Now this
	function generates "VeriSign Class 3 Public Primary CA - G2".
	(twittering-make-connection-info): replace the parameter
	`cacert-fullpath' with `cacert-directory-fullpath'.
	(twittering-send-http-request-native): remove redundant bindings.
	(twittering-send-http-request-curl): follow the modification of
	the parameter generated by `twittering-make-connection-info'.
	(twittering-send-http-request-wget): likewise.
	* cert/equifax.pem: removed. This certificate had not been used.
	* cert/Equifax_Secure_Certificate_Authority.cer: Add a certificate
	that has been used. It was retrieved from
	https://www.geotrust.com/resources/root_certificates/certificates/Equifax_Secure_Certificate_Authority.cer ,
	which is used only for verifying the server `search.twitter.com'.
	* cert/PCA-3G2.pem: Add a root certificate. It is retrieved from
	https://www.verisign.com/repository/roots/root-certificates/PCA-3G2.pem ,
	which is used for verifying the server `api.twitter.com'.

2011-07-16  Tadashi MATSUO  <tad@mymail.twin.jp>

	* test/test-twittering-mode.el: Add tests for HMAC-SHA1.

	* twittering-mode.el: Fix the function for HMAC-SHA1 so that it
	always return a correct digest.
	(twittering-sha1): new function. This function can return a