@@ -19,6 +19,13 @@
 * HMAC-SHA1の計算を修正
   以前の`twittering-hmac-sha1'は現在のcoding-systemによっては間違った
   結果を返す場合がありました。この問題を修正しました。
+* 数字からなるユーザ名(screen_name)とユーザIDの混同を一部修正
+  他ユーザのtimelineを取得する際、数字のみからなるユーザ名を指定すると
+  ユーザIDと混同してしまう問題を修正しました。他ユーザの「お気に入り」
+  (favorites)を取得する場合にも同様の問題が起こりますが、こちらは修正
+  できていません。「お気に入り」を取得するAPIにユーザIDではなくユーザ
+  名を指定するパラメータがないためです。
+  Thanks to Makoto Fujiwara who reported this problem.
 
  2.0.0: 2011-04-22
 ------------------
