@@ -3946,7 +3946,12 @@ block-and-report-as-spammer -- Block a user and report him or her as a spammer.
 		      ("rpp" . ,number-str)))
 		   ((eq spec-type 'list)
 		    `(("per_page" . ,number-str)))
-		   ((memq spec-type '(user friends mentions public))
+		   ((eq spec-type 'user)
+		    (let ((username (elt spec 1)))
+		      `(("count" . ,number-str)
+			("include_rts" . "true")
+			("screen_name" . ,username))))
+		   ((memq spec-type '(friends mentions public))
 		    `(("count" . ,number-str)
 		      ("include_rts" . "true")))
 		   (t
@@ -3964,14 +3969,12 @@ block-and-report-as-spammer -- Block a user and report him or her as a spammer.
 	      (replies . "statuses/replies")
 	      (retweeted_by_me . "statuses/retweeted_by_me")
 	      (retweeted_to_me . "statuses/retweeted_to_me")
-	      (retweets_of_me . "statuses/retweets_of_me")))
+	      (retweets_of_me . "statuses/retweets_of_me")
+	      (user . "statuses/user_timeline")))
 	   (host (cond ((eq spec-type 'search) twittering-api-search-host)
 		       (t twittering-api-host)))
 	   (method
 	    (cond
-	     ((eq spec-type 'user)
-	      (let ((username (elt spec 1)))
-		(twittering-api-path "statuses/user_timeline/" username)))
 	     ((eq spec-type 'list)
 	      (let ((username (elt spec 1))
 		    (list-name (elt spec 2)))
